1- update config to support mcp stream

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: proxmox-mcp-server
+  ai:
+    mcp:
+      server:
+        protocol: STREAMABLE
+        type: SYNC
