1- fix dependency check report issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           project: ${{ github.repository }}
           path: .
-          format: 'HTML,XML'
+          format: 'ALL'
           out: target/dependency-check
           args: >
             --nvdApiKey ${{ secrets.NVD_API_KEY }}
