--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,16 +63,19 @@ jobs:
       - name: Build for dependency analysis
         run: mvn -B -DskipTests package
       - name: Run dependency check
-        uses: dependency-check/Dependency-Check_Action@1.1.0
+        uses: dependency-check/Dependency-Check_Action@main
         env:
           JAVA_HOME: /opt/jdk
+          NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
         with:
           project: ${{ github.repository }}
           path: .
           format: 'ALL'
           out: target/dependency-check
           args: >
+            --failOnCVSS 7
             --nvdApiKey ${{ secrets.NVD_API_KEY }}
+            --enableRetired
       - name: Archive dependency check report
         uses: actions/upload-artifact@v4
         with:
