--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,9 @@ on:
 
 permissions:
   contents: read
-  security-events: write
+  security-events: write   # for CodeQL upload
   actions: read
+  packages: read
 
 jobs:
   build-test:
