1- fix dependency check issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,7 @@ jobs:
             --failOnCVSS 7
             --nvdApiKey ${{ secrets.NVD_API_KEY }}
             --enableRetired
+            --suppression dependency-check-suppressions.xml
       - name: Archive dependency check report
         uses: actions/upload-artifact@v4
         with:
