--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
         run: mvn -B -DskipTests package
       - name: Run dependency check
         uses: dependency-check/Dependency-Check_Action@main
+        continue-on-error: true
         env:
           JAVA_HOME: /opt/jdk
           NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
