--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           path: target/dependency-check
           if-no-files-found: warn
 
-  sast:
+  sast-codeql:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -95,13 +95,13 @@ jobs:
           java-version: '21'
           cache: maven
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@main
         with:
           languages: java
       - name: Build
         run: mvn -B -DskipTests package
       - name: Analyze
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@main
         with:
           output: codeql-results
       - name: Archive CodeQL report
