--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
 							<goal>check</goal>
 						</goals>
 						<configuration>
+                            <skip>true</skip>
 							<outputDirectory>${project.build.directory}/dependency-check</outputDirectory>
 							<formats>
 								<format>HTML</format>
