1- fix cd permission

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,8 @@ jobs:
     permissions:
       contents: read
       security-events: write
+      actions: read
+      packages: read
 
   release:
     if: github.event.pull_request.merged == true
